# dose-certa

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ENTREGA_PDF.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: android-build.yml  ci.yml  repo-guard.yml  secret-scan.yml
.streamlit/: secrets.toml.example
android-native/: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
android-native/app/: build.gradle.kts  proguard-rules.pro
android-native/app/src/main/: AndroidManifest.xml
android-native/app/src/main/java/com/dosecerta/android/: AlarmUtils.kt  MainActivity.kt
android-native/app/src/main/java/com/dosecerta/android/data/: Medication.kt  MedicationStorage.kt
android-native/app/src/main/java/com/dosecerta/android/ui/theme/: Color.kt  Theme.kt  Type.kt
android-native/app/src/main/res/values/: strings.xml  themes.xml
android-native/app/src/test/java/com/dosecerta/android/: AlarmUtilsTest.kt
src/dose_certa/: __init__.py  alarm_links.py  app.py  service.py  storage.py
tests/: test_alarm_links.py  test_service.py  test_storage.py
